# continual-tiny-transformer

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_COMPLETE.md  AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_SETUP.md  AUTONOMOUS_SDLC_SUCCESS_REPORT.md  AUTONOMOUS_SDLC_SUCCESS_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dev  Dockerfile.development  Dockerfile.production  Dockerfile.staging  FINAL_AUTONOMOUS_SDLC_SUCCESS.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  RESEARCH_IMPLEMENTATION_REPORT.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  TERRAGON_RESEARCH_COMPLETION.md  TERRAGON_VALUE_DELIVERY.md  WORKFLOW_ACTIVATION_GUIDE.md  WORKFLOW_ACTIVATION_REQUIRED.md  autonomous_sdlc_results.json  autonomous_validation_report.json  comprehensive_quality_gates.py  (+35 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md  question.md  security.md
.github/workflows/: continual-learning-cicd.yml
.terragon/: autonomous-executor.py  schedule.sh  value-discovery.py  value-metrics.json
deployment/: deployment_guide.md  production_api.py
deployment/docker/: Dockerfile.sdlc  healthcheck.sh
deployment/kubernetes/: sdlc-deployment.yaml
deployment/scripts/: deploy.sh
deployment/terraform/: main.tf
docs/: API_REFERENCE.md  DEVELOPMENT.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  MANUAL_SETUP_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  ROADMAP.md  SDLC_FRAMEWORK.md  SETUP_REQUIRED.md
docs/adr/: 0001-zero-parameter-continual-learning.md  template.md
docs/api/: README.md  core.md
docs/compliance/: slsa.md
docs/monitoring/: observability.md
docs/operations/: deployment.md  runbooks.md
docs/security/: SBOM.md
docs/tutorials/: 01-quickstart.md  README.md
docs/workflows/: DEPENDABOT_SETUP.md  GITHUB_ACTIONS_SETUP.md  MONITORING_OBSERVABILITY.md  README.md  REPOSITORY_GOVERNANCE.md  automation-guide.md  ci.yml.template  continual-learning-cicd.yml  dependabot.yml.template  deployment-strategies.md  release.yml.template  security-compliance.md
examples/: basic_usage.py  complete_demo.py  complete_workflow_demo.py  data_management_example.py  production_deployment.py  quick_demo.py  research_integration_demo.py
k8s/development/: deployment.yaml  secret.yaml  service.yaml
k8s/production/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml
k8s/staging/: configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml
kubernetes/: production-deployment.yaml  production-manifests.yaml
scripts/: automation-health-check.py  build.sh  generate-sbom.py  hyperscale_optimizer.py  metrics-collector.py  quality-check.py  quality_check_complete.py  quality_gates_validator.py  repo-maintenance.py  sdlc_automation.py  sdlc_monitoring.py  security-scan.sh  security_scanner.py  setup_dev_environment.sh  validate_implementation.py
src/continual_transformer/: __init__.py  advanced_research_validation.py  cli.py  config.py  hyperscale_optimization.py  production_deployment.py
src/continual_transformer/adapters/: __init__.py  activation.py
src/continual_transformer/api/: __init__.py  simplified_api.py
src/continual_transformer/core/: __init__.py  config.py  error_recovery.py  model.py  performance.py
src/continual_transformer/data/: __init__.py  loaders.py  processors.py  storage.py
src/continual_transformer/deployment/: __init__.py
src/continual_transformer/i18n/: localization.py
src/continual_transformer/metrics/: __init__.py  continual_metrics.py
src/continual_transformer/monitoring/: __init__.py  health.py  logging_config.py  metrics.py  system_monitor.py
src/continual_transformer/optimization/: __init__.py  adaptive_learning.py  auto_optimization.py  knowledge_transfer.py  memory_optimization.py  neural_architecture_search.py  performance_optimizer.py
src/continual_transformer/reliability/: advanced_error_recovery.py  failsafe_system.py  health_monitor.py
src/continual_transformer/research/: advanced_error_recovery.py  distributed_continual_learning.py  experimental_validation_framework.py  meta_continual_learning.py  neuromorphic_continual_learning.py  performance_optimization.py  quantum_continual_learning.py  security_validation.py
src/continual_transformer/resilience/: __init__.py  auto_recovery.py  circuit_breaker.py
src/continual_transformer/scaling/: __init__.py  auto_scaling.py  distributed_continual_learning.py  distributed_training.py  hyperscale_distributed_continual_learning.py
src/continual_transformer/sdlc/: __init__.py  automation.py  core.py  monitoring.py  optimization.py  reliability.py  security.py
src/continual_transformer/security/: __init__.py  sanitizer.py  scanner.py  validator.py
src/continual_transformer/tasks/: __init__.py  manager.py
src/continual_transformer/utils/: __init__.py  knowledge_distillation.py
tests/: __init__.py  conftest.py  test_autonomous_implementation.py  test_code_quality.py  test_comprehensive_continual_learning.py  test_integration_basic.py  test_sdlc_framework.py  test_sdlc_integration.py  utils.py
tests/benchmarks/: __init__.py  test_performance.py  test_scaling_performance.py
tests/integration/: __init__.py  test_continual_learning.py  test_deployment.py
tests/unit/: __init__.py  test_api.py  test_continual_transformer.py  test_example.py  test_security.py
workflows-to-activate/: ci.yml  release.yml  security.yml
